# inzone-buds-battery-tray

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
config/: settings.json
docs/: RELEASING.md  protocol.md
scripts/: build_release_zip.bat  build_release_zip.ps1
src/: app.rs  cli.rs  main.rs
src/config/: settings.rs
src/hid/: hid_manager.rs  inzone_hub.rs  inzone_parser.rs  mod.rs
src/models/: battery_status.rs
src/services/: battery_service.rs  mod.rs  notification_service.rs
src/tray/: icon_renderer.rs  mod.rs  tray_manager.rs
src/utils/: logger.rs  mod.rs  paths.rs  single_instance.rs
